--- a/tests/integration/targets/vm/tasks/main.yml
+++ b/tests/integration/targets/vm/tasks/main.yml
@@ -24,7 +24,7 @@
         state: absent
       register: result
 
-    - name: Upload ISO image TinyCore-current.iso to HyperCore API
+    - name: Upload ISO image TinyCore-vm-integration.iso to HyperCore API
       scale_computing.hypercore.iso:
         name: "TinyCore-vm-integration.iso"
         source: "/tmp/TinyCore-vm-integration.iso"
@@ -90,68 +90,54 @@
           - vm_created.record.0.boot_devices.1.vlan == 0
           - vm_created.record.0.power_state == "started"
 
-    - name: Create the exact same vm
+    - name: Create the exact same VM (idempotency)
       scale_computing.hypercore.vm: *create-vm
       register: result
     - ansible.builtin.assert:
         that:
           - result is not changed
 
-    - name: Delete snapshot schedule (if it exists from before)
-      scale_computing.hypercore.snapshot_schedule: &delete-snapshot-schedule
-        name: demo-snap-schedule
-        state: absent
-
-    - name: Setup snapshot schedule
-      scale_computing.hypercore.snapshot_schedule:
-        name: demo-snap-schedule
-        state: present
-        recurrences:
-          - name: weekly-tuesday
-            frequency: "FREQ=WEEKLY;INTERVAL=1;BYDAY=TU"  # RFC-2445
-            start: "2010-01-01 00:00:00"
-            local_retention: "{{ 10 * 7*24*60*60 }}"  # 10 days, unit seconds
-      register: snapshot_schedule
-
     - name: Update the VM
       scale_computing.hypercore.vm: &update-vm
         vm_name: vm-integration-test-vm
-        description: Demo VM - updated
-        tags:
-          - Xlab
-        vcpu: 3
-        memory:  "{{ '1024 MB' | human_to_bytes }}"
-        power_state: stop
-        snapshot_schedule: "{{ snapshot_schedule.record[0].name }}"
         state: present
-        # TODO (tjazsch): Add setters for disks and nics
-        # At the moment, setting disks and nics to arbitrary value doesn't change anything.
-        # This will be adressed in the following PRs.
-        disks: []
+        memory: "{{ '512 MB' | human_to_bytes }}"
+        vcpu: 2
+        disks:
+          - type: ide_cdrom
+            disk_slot: 0
+            iso_name: TinyCore-vm-integration.iso
+          - type: virtio_disk
+            disk_slot: 1
+            size: "{{ '20 GB' | human_to_bytes }}"
+          - type: virtio_disk
+            disk_slot: 0
         nics: []
         boot_devices: []
       register: result
     - ansible.builtin.assert:
         that:
           - result is changed
-          - result.reboot_needed == true
+          - not result.reboot_needed
 
-    # TODO (tjazsch): Add more tests when disks and nics are finished
-    - name: Check VM's params changed
-      scale_computing.hypercore.vm_info: &find-vm-by-name-updated
+    # TODO (tjazsch): Add test for setting nics here when integration test is finished
+    - name: Assert the VM has been updated
+      scale_computing.hypercore.vm_info: &get-vm-by-name
         vm_name: vm-integration-test-vm
       register: result
     - ansible.builtin.assert:
         that:
-          - result.records[0].vm_name == "vm-integration-test-vm"
-          - result.records[0].description == "Demo VM - updated"
-          - result.records[0].tags == ["Xlab"]
-          - result.records[0].vcpu == 3
-          - result.records[0].memory == 1073741824
-          - result.records[0].power_state == "stopped"
-          - result.records[0].snapshot_schedule == snapshot_schedule.record[0].name
+          - result.records[0].boot_devices == []
+          - result.records[0].disks.0.type == "virtio_disk"
+          - result.records[0].disks.0.disk_slot == 0
+          - result.records[0].disks.1.type == "ide_cdrom"
+          - result.records[0].disks.1.iso_name == "TinyCore-vm-integration.iso"
+          - result.records[0].disks.2.type == "virtio_disk"
+          - result.records[0].disks.2.disk_slot == 1
+          - result.records[0].vcpu == 2
+          - result.records[0].memory == 536870912
 
-    - name: Update the VM (idempotency check)
+    - name: Update the VM (idempotency)
       scale_computing.hypercore.vm: *update-vm
       register: result
     - ansible.builtin.assert:
@@ -161,9 +147,6 @@
     - name: Delete the VM with name vm-integration-test-vm
       scale_computing.hypercore.vm: *delete-vm
       register: result
-
-    - name: Delete snapshot schedule
-      scale_computing.hypercore.snapshot_schedule: *delete-snapshot-schedule
 
     - name: Delete the ISO image
       scale_computing.hypercore.iso: *delete-iso
@@ -176,7 +159,7 @@
       register: file_deleted
 
     - name: Assert that record has been deleted
-      scale_computing.hypercore.vm_info: *find-vm-by-name-updated
+      scale_computing.hypercore.vm_info: *get-vm-by-name
       register: result
     - ansible.builtin.assert:
         that:
