--- a/examples/hypercore_inventory.yml
+++ b/examples/hypercore_inventory.yml
@@ -12,5 +12,5 @@ plugin: scale_computing.hypercore.hypercore
 # - if set, then VMs with "ansible_disable" tag are not included into inventory
 # VM with both set:
 # - will be excluded from inventory
-look_for_ansible_enable: True
-look_for_ansible_disable: True
+look_for_ansible_enable: true
+look_for_ansible_disable: true
