--- a/examples/iso_info.yml
+++ b/examples/iso_info.yml
@@ -1,7 +1,8 @@
+---
 - name: Example iso_info module
   hosts: localhost
   connection: local
-  gather_facts: False
+  gather_facts: false
   environment:
     MY_VAR: my_value
     # - SC_HOST: https://1.2.3.4
@@ -10,31 +11,31 @@
 
   tasks:
   # ------------------------------------------------------
-  - name: List all ISOs
-    scale_computing.hypercore.iso_info:
-    register: iso_results
+    - name: List all ISOs
+      scale_computing.hypercore.iso_info:
+      register: iso_results
 
-  - name: Show all ISOs
-    debug:
-      var: iso_results
+    - name: Show all ISOs
+      debug:
+        var: iso_results
 
-  # ------------------------------------------------------
-  - name: Get info about specific ISO image - scale-guest-tools
-    scale_computing.hypercore.iso_info:
-      name: scale-guest-tools-3.0.iso
-    register: iso_results
+    # ------------------------------------------------------
+    - name: Get info about specific ISO image - scale-guest-tools
+      scale_computing.hypercore.iso_info:
+        name: scale-guest-tools-3.0.iso
+      register: iso_results
 
-  - name: Show info about single ISO
-    debug:
-      var: iso_results
+    - name: Show info about single ISO
+      debug:
+        var: iso_results
 
-  # ------------------------------------------------------
-  # TODO this should fail
-  - name: Get info about not present ISO image
-    scale_computing.hypercore.iso_info:
-      name: no-such-iso-image-p29bvao8w6f4evo.iso
-    register: iso_results
+    # ------------------------------------------------------
+    # TODO this should fail
+    - name: Get info about not present ISO image
+      scale_computing.hypercore.iso_info:
+        name: no-such-iso-image-p29bvao8w6f4evo.iso
+      register: iso_results
 
-  - name: Show info about not present ISO
-    debug:
-      var: iso_results
+    - name: Show info about not present ISO
+      debug:
+        var: iso_results
