CI run at most one "ansible-test integration" at a time

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,8 @@ docs:
 integration:
   stage: test
   image: python:3.8.12-slim-buster
+  # we have a single HC3 cluster, so run at most one "ansible-test integration" at a time.
+  resource_group: hc3_cluster_0
   script:
     - pip install ansible-core==2.13.1
     # ansible-test needs special directory structure.
