Try to run integration tests in parallel with generated child pipeline
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.pyc
 tests/output
 *.tar.gz
+child-pipeline-gitlab-ci.yml
 
 # integration_config.yml contains connection info for the
 # developer instance, including credentials
