From diff remove vm_name if not changed

--- a/tests/integration/targets/vm_params/tasks/main.yml
+++ b/tests/integration/targets/vm_params/tasks/main.yml
@@ -142,7 +142,7 @@
   - ansible.builtin.assert:
       that:
         - output is changed
-        - output.reboot_needed == true
+        - output.reboot_needed == false
 
   - name: Check VMs params changed
     scale_computing.hypercore.vm_info:
