Migrate code from modules/vm_nic into module_utils/vm and use it in the modules/vm as well.

--- a/tests/integration/targets/vm_boot_devices/tasks/main.yml
+++ b/tests/integration/targets/vm_boot_devices/tasks/main.yml
@@ -16,6 +16,7 @@
         vm_name: vm-integration-test-boot_devices
         description: Demo VM
         tags:
+          - "Xlab"
           - "Integration test"
         memory: "{{ '512 MB' | human_to_bytes }}"
         vcpu: 2
