Integration test update: - vm_params updated - adding in shutdown test

--- a/tests/integration/targets/vm_params/tasks/main.yml
+++ b/tests/integration/targets/vm_params/tasks/main.yml
@@ -61,6 +61,7 @@
       memory:  "{{ '1024 MB' | human_to_bytes }}"
       power_state: stop
       snapshot_schedule: "{{ snapshot_schedule.record[0].name }}"
+      force_reboot: True
     register: output
   - ansible.builtin.assert:
       that:
